used kaloyan-calendar-utils

--- a/demos/plunker-assets/plunker-system-config.ejs
+++ b/demos/plunker-assets/plunker-system-config.ejs
@@ -35,7 +35,7 @@ System.config({
     '@angular/cdk/platform': 'npm:@angular/cdk@<%- dependencyVersions.angularCdk %>/bundles/cdk-platform.umd.js',
 
     'angular-calendar': 'npm:angular-calendar@<%- dependencyVersions.angularCalendar %>/bundles/angular-calendar.umd.js',
-    'calendar-utils': 'npm:calendar-utils@<%- dependencyVersions.calendarUtils %>/dist/umd/calendar-utils.js',
+    'kaloyan-calendar-utils': 'npm:kaloyan-calendar-utils@<%- dependencyVersions.calendarUtils %>/dist/umd/calendar-utils.js',
     'angular-resizable-element': 'npm:angular-resizable-element@<%- dependencyVersions.angularResizableElement %>/bundles/angular-resizable-element.umd.js',
     'angular-draggable-droppable': 'npm:angular-draggable-droppable@<%- dependencyVersions.angularDraggableDroppable %>/bundles/angular-draggable-droppable.umd.js',
     'date-fns': 'npm:date-fns@<%- dependencyVersions.dateFns %>',
